# himipi-sys

./: .drone.yml  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  target-runner.sh
.cargo/: hi3531v100-static.toml  hi3531v100.toml  hi3559av100-static.toml  hi3559av100.toml
src/: lib.rs
